fix: Adjust layout and spacing in navigation bar and project cards

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,7 +69,7 @@ html.dark {
   }
 
   .project__card__select {
-    @apply text-2xl lg:text-3xl  flex gap-8 items-center justify-center hover:text-green-500;
+    @apply text-base sm:text-3xl  flex gap-8 items-center justify-center hover:text-green-500;
   }
 
   .checkbox {
